# web_server

./: .gitignore  README.md  pyproject.toml
app/: api.py  run.py
executables/: run_server.bat
src/web_server/: __init__.py  __main__.py  api.py  constants.py  environment.py  exceptions.py  logger.py  server.py  static.py  utils.py
src/web_server/api/: handlers.py  utils.py
src/web_server/app/: __init__.py  api.py  models.py
src/web_server/server/: server.py  utils.py
src/web_server/utils/: application_utils.py  server_utils.py
tests/: test_application_utils.py  test_post.py  test_server.py  test_server_utils.py
